--- a/11-worldwise/package.json
+++ b/11-worldwise/package.json
@@ -12,8 +12,10 @@
     "server-help": "json-server --help"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
