--- a/17-the-wild-oasis/package.json
+++ b/17-the-wild-oasis/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.44.4",
+    "@tanstack/react-query": "4",
+    "@tanstack/react-query-devtools": "4",
+    "date-fns": "^3.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
